<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!--程序标题-->
    <string name="app_name">素时钟</string>

    <!--通用文本-->
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    
    <!--Preference标题-->
	<string name="title_main">素时钟设置</string>
    <string name="title_display">显示</string>
    <string name="title_others">其它选项</string>
    <string name="title_skin">皮肤</string>
    <string name="title_time_format">24小时制</string>
    <string name="title_date_color">日期颜色</string>
    <string name="title_date_format">日期格式</string>
    <string name="title_date_splitter">日期分隔符</string>
    <string name="title_reduce_res_use">降低资源开销（推荐）</string>
    <string name="title_restore_preference">还原为默认设置</string>
    
    <!--Preference提示信息-->
    <string name="summary_skin">系统提供了多种皮肤。\n当前：[摩登蓝]</string>
    <string name="summary_show_bg_on">显示日期和时间的背景图像</string>
    <string name="summary_show_bg_off">日期和时间背景透明到桌面</string>
    <string name="summary_time_format_on">当前时间使用24小时制表示</string>
    <string name="summary_time_format_off">当前时间使用12小时制表示</string>
    <string name="summary_date_color">设置日期显示颜色。当前：[#0099FF]</string>
    <string name="summary_date_format">日期显示格式，如：2010-12-31。\n当前：[2010年12月31日]</string>
    <string name="summary_date_splitter">自定义日期分隔符。当前：-</string>
    <string name="summary_reduce_res_use_on">系统资源节约模式已启用</string>
    <string name="summary_reduce_res_use_off">系统资源节约模式已关闭</string>
    <string name="summary_restore_preference">将以上所有选项全部还原为程序初始状态</string>
    
    <!--Preference选项子菜单项名称数组-->
    <string-array name="arr_name_skin">
		<item>摩登蓝</item>
		<item>摩登红</item>
		<item>摩登黄</item>
		<item>半透蓝</item>
    </string-array>
    <string-array name="arr_name_time_format">
		<item>2010年12月31日</item>
		<item>2010-12-31</item>
		<item>12-31-2010</item>
    </string-array>
    
    <!--Preference选项子菜单项名称对应数值-->
    <string-array name="arr_value_skin">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
    </string-array>
    <string-array name="arr_value_time_format">
		<item>0</item>
		<item>1</item>
		<item>2</item>
    </string-array>
</resources>